syntax = "proto3";
package TournamentAssistantShared.Models.Packets;

option csharp_namespace = "TournamentAssistantShared.Models.Packets";

import "google/protobuf/any.proto";

message ForwardingPacket {
	repeated string forward_to = 1;
	google.protobuf.Any specific_packet = 2;
}