syntax = "proto3";
package TournamentAssistantShared.Models;

option csharp_namespace = "TournamentAssistantShared.Models";

import "beatmap_difficulty.proto";

message Characteristic {
	string serialized_name = 1;
	repeated BeatmapDifficulty difficulties = 2;
}