syntax = "proto3";
package TournamentAssistantShared.Models.Packets;

option csharp_namespace = "TournamentAssistantShared.Models.Packets";

message Acknowledgement {
	enum AcknowledgementType {
		MessageReceived = 0;
		FileDownloaded = 1;
	}

	string packet_id = 1;
	AcknowledgementType type = 2;
}