syntax = "proto3";
package TournamentAssistantShared.Models;

option csharp_namespace = "TournamentAssistantShared.SharedConstructs";

enum BeatmapDifficulty {
	Easy = 0;
    Normal = 1;
    Hard = 2;
    Expert = 3;
    ExpertPlus = 4;
}